--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts" : {
+  "build:css" : "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+  },
   "devDependencies": {
     "tailwindcss": "^4.1.11"
   }
