--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts" : {
-  "build:css" : "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+  "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify",
+  "build": "npm run build:css"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.11"
